#40 обновил документацию Swagger
