# api/server.go
@@ -1,6 +1,7 @@
 package api
 
 import (
+	"fmt"
 	"net/http"
 
 	url "github.com/SouthUral/service_sync_tables/database/urlstorage"
@@ -27,17 +28,19 @@ func InitServer(OutPutChan OutputAPIChan, URLChan url.InputUrlStorageAPIch, serv
 }
 
 func (srv *Server) StartServer() {
-	http.HandleFunc("/swagger/", httpSwagger.Handler(httpSwagger.URL("http://localhost:3000/swagger/doc.json")))
+	urlSwag := fmt.Sprintf("http://localhost%s/swagger/doc.json", srv.Port)
+
+	http.HandleFunc("/swagger/", httpSwagger.Handler(httpSwagger.URL(urlSwag)))
 	http.HandleFunc("/all_sync", middlwareGET(srv.allSync))
 	http.HandleFunc("/add_sync", middlwarePOST(srv.addNewSync))
 	http.HandleFunc("/stop_sync", middlwarePOST(srv.stopSync))
 	http.HandleFunc("/start_sync", middlwarePOST(srv.startSync))
 	http.HandleFunc("/start-allSync", middlwarePOST(srv.startAllSync))
 	http.HandleFunc("/stop-allSync", middlwarePOST(srv.stopAllSync))
-	http.HandleFunc("/all-conn-bd", middlwareGET(srv.GetAllDBConn))
-	http.HandleFunc("/one-conn-bd", middlwareGET(srv.GetOneDBConn))
-	http.HandleFunc("/change-one-conn-bd", middlwarePUT(srv.ChangeOneDBConn))
-	http.HandleFunc("/add-one-conn-bd", middlwarePOST(srv.AddOneDBConn))
+	http.HandleFunc("/all-connbd", middlwareGET(srv.getAllDBConn))
+	http.HandleFunc("/one-conn-bd", middlwarePOST(srv.getOneDBConn))
+	http.HandleFunc("/change-one-conn-bd", middlwarePUT(srv.changeOneDBConn))
+	http.HandleFunc("/add-one-conn-bd", middlwarePOST(srv.addOneDBConn))
 	http.ListenAndServe(srv.Port, nil)
 
 }
@@ -46,7 +49,7 @@ func (srv *Server) StartServer() {
 //
 //	@Summary 		allSync
 //	@Description 	some description
-//	@Tags 			Get
+//	@Tags 			GET
 //	@Accept       	json
 //	@Produce      	json
 //	@Success		200		{object}	StateAnswer
@@ -57,7 +60,7 @@ func (srv *Server) allSync(w http.ResponseWriter, r *http.Request) {
 }
 
 // @Summary 	stopSync
-// @Tags 		Post
+// @Tags 		POST
 // @Description метод для остановки синхронизации
 // @Param 		request 	body 	InputDataApi 	false 	"body example"
 // @Router		/stop_sync	[post]
@@ -67,7 +70,7 @@ func (srv *Server) stopSync(w http.ResponseWriter, r *http.Request) {
 }
 
 // @Summary addNewSync
-// @Tags Post
+// @Tags POST
 // @Description метод для добавления новой синхронизации
 // @Param 		request 	body 	InputDataApi 	false 	"body example"
 // @Router		/add_sync	[post]
@@ -77,7 +80,7 @@ func (srv *Server) addNewSync(w http.ResponseWriter, r *http.Request) {
 }
 
 // @Summary startSync
-// @Tags Post
+// @Tags POST
 // @Description метод для старта приостановленной синхронизации
 // @Param 		request 	body 	InputDataApi 	false 	"body example"
 // @Router		/start_sync	[post]
@@ -87,7 +90,7 @@ func (srv *Server) startSync(w http.ResponseWriter, r *http.Request) {
 }
 
 // @Summary startAllSync
-// @Tags Post
+// @Tags POST
 // @Description метод для старта всех синхронизаций
 // @Router		/start-allSync	[post]
 func (srv *Server) startAllSync(w http.ResponseWriter, r *http.Request) {
@@ -96,7 +99,7 @@ func (srv *Server) startAllSync(w http.ResponseWriter, r *http.Request) {
 }
 
 // @Summary stopAllSync
-// @Tags Post
+// @Tags POST
 // @Description метод остановки всех синхронизаций
 // @Router		/stop-allSync	[post]
 func (srv *Server) stopAllSync(w http.ResponseWriter, r *http.Request) {
@@ -104,22 +107,54 @@ func (srv *Server) stopAllSync(w http.ResponseWriter, r *http.Request) {
 	log.Info("stopAllSync request processed")
 }
 
-func (srv *Server) GetAllDBConn(w http.ResponseWriter, r *http.Request) {
+// @Summary getAllDBConn
+// @Tags GET
+// @Accept       	json
+// @Produce      	json
+// @Success		200		{object}	url.StorageConnDB
+// @Description метод для получения параметров подключения к базам данных и их элиасу
+// @Router		/all-connbd	[get]
+func (srv *Server) getAllDBConn(w http.ResponseWriter, r *http.Request) {
 	GetURLmethod(w, r, srv.URLInputCh)
 	log.Info("GetAllDBConn request processed")
 }
 
-func (srv *Server) GetOneDBConn(w http.ResponseWriter, r *http.Request) {
+// @Summary getOneDBConn
+// @Tags GET
+// @Accept       	json
+// @Produce      	json
+// @Success		200		{object}	url.ConnDBData
+// @Failure     500     {object}    ErrorResponse
+// @Param 		request 	body 	RequestDBConn 	false 	"body example"
+// @Description метод для получения параметров подключения к БД по элиасу
+// @Router		/one-conn-bd	[post]
+func (srv *Server) getOneDBConn(w http.ResponseWriter, r *http.Request) {
 	getOneURLMethod(w, r, srv.URLInputCh)
 	log.Info("GetOneDBConn request processed")
 }
 
-func (srv *Server) ChangeOneDBConn(w http.ResponseWriter, r *http.Request) {
+// @Summary ChangeOneDBConn
+// @Tags PUT
+// @Accept       	json
+// @Produce      	json
+// @Success		200		{object}	StateAnswer
+// @Param 		request 	body 	url.JsonFormat 	false 	"body example"
+// @Description метод для изменения параметров подключения к БД по элиасу
+// @Router		/change-one-conn-bd	[put]
+func (srv *Server) changeOneDBConn(w http.ResponseWriter, r *http.Request) {
 	changeOneURLMethod(w, r, srv.URLInputCh)
 	log.Info("ChangeOneDBConn request processed")
 }
 
-func (srv *Server) AddOneDBConn(w http.ResponseWriter, r *http.Request) {
+// @Summary AddOneDBConn
+// @Tags POST
+// @Accept       	json
+// @Produce      	json
+// @Success		200		{object}	url.StorageConnDB
+// @Param 		request 	body 	url.JsonFormat 	false 	"body example"
+// @Description метод для добавления параметров подключения к БД
+// @Router		/add-one-conn-bd	[post]
+func (srv *Server) addOneDBConn(w http.ResponseWriter, r *http.Request) {
 	addOneURLMethod(w, r, srv.URLInputCh)
 	log.Info("AddOneDBConn request processed")
 }
